src/style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans');
@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Domine:wght@400;500;600;700&family=Biryani:wght@300;400;600;700;800;900&display=swap');
@import 'embed.css';
@import 'dracula.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  scroll-behavior: smooth;
}

:root {
  font-family: 'Biryani', system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;

  @apply text-light bg-dark;

  background-image: url(/texture.png);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

a {
  font-weight: 500;
  color: #f9f9f9;
  text-decoration: inherit;
}
a:hover {
  color: #8f3ced;
  transition: 0.2s ease;
}

html {
  overflow-x: hidden;
}

html,
body {
  width: 100vw;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
  @apply text-base;
}

.wrapper {
  @apply mx-auto container w-screen text-left px-4;
}

.article-wrapper {
  @apply mx-auto relative container w-screen lg:max-w-screen-md text-left;
}

h1 {
  font-family: 'Alegreya';
  @apply my-12 font-extrabold leading-none tracking-tight text-8xl;
}

h2 {
  font-family: 'Domine';
  @apply text-4xl tracking-tighter font-extrabold my-8 mt-16;
}

h3 {
  font-family: 'Domine';
  @apply text-2xl tracking-tighter font-semibold  my-6 mt-12;
}

p {
  font-family: 'Biryani';
  font-weight: 500;
  @apply my-3 text-base leading-loose text-light/60;
}

b {
  @apply font-bold;
}

code {
  @apply text-sm font-mono text-secondary bg-secondary/10 rounded-md px-2 py-1;
}

.hljs {
  @apply px-16 py-8 !important;
}

.highlighted {
  @apply font-extrabold relative inline-block cursor-pointer z-10 text-light;
}

.highlighted::after {
  content: ' ';
  position: absolute;
  bottom: 0.3rem;
  left: 0.5rem;
  right: 0;
  margin: auto;
  width: calc(100% - 0.5rem);
  z-index: -1;
  transition: all 0.2s ease;
  @apply border-b-4 border-dotted border-secondary;
}

.highlighted:hover::after {
  left: 0;
  transition: all 0.2s ease;
}

.card {
  padding: 2em;
}

#app {
  width: 100vw;
  margin: 0 auto;
  text-align: center;
}

b {
  @apply font-bold text-light;
}

.fp-watermark {
  display: none;
}

.bg-img {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  filter: grayscale(100%);
  z-index: -2;
}

@keyframes fadein {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
div [lazy='loaded'] {
  opacity: 0;
  animation-name: fadein;
  animation-duration: 0.5s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
  animation-direction: normal;
  animation-timing-function: ease-out;
}

#grid {
  filter: grayscale(10%);
  opacity: 0.08;
  background-size: unset;
  background-image: url(/grid.png);
}

.bg-img.wave {
  filter: grayscale(10%);
  opacity: 0.03;
  filter: invert(1);
  transform: rotate(180deg);
  background-size: unset;
  background-blend-mode: lighten;
}

.badge {
  @apply inline-block mx-1 px-2 py-1 font-bold leading-none bg-secondary text-light;
}

.logo {
  filter: invert(1);
}

#fp-nav.fp-left {
  left: 40px !important;
}

#fp-nav ul li a span,
.fp-slidesNav ul li a span {
  background: #555 !important;
}

::-webkit-scrollbar {
  width: 8px;
  height: 10px;
}

::-webkit-scrollbar-thumb {
  border-radius: 8px;
  background-color: #d6dee120;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #d6dee120;
}

::-webkit-scrollbar-corner {
  background: transparent;
}

.expand-enter-active {
  transition: all 1s ease;
}

.expand-enter-from,
.expand-leave-to {
  opacity: 0;
  width: 0;
}

.section {
  @apply w-screen min-h-screen relative flex items-center;
}

.chart {
  @apply max-w-md mx-auto rounded-md;
}

.plot-container.plotly {
  @apply rounded-xl overflow-clip;
}

.js-plotly-plot {
  @apply my-4;
}

@keyframes bounce {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-10px);
  }
  100% {
    transform: translateY(0);
  }
}

.indicator {
  position: absolute !important;
  left: 0;
  right: 0;
  margin: auto;
  bottom: 50px;
  width: 20px;
  height: 30px;
  border: 2px solid #ccc;
  border-radius: 50px;
  position: relative;
  animation: bounce 1s infinite ease-in-out both alternate 0.5s;
}

.indicator:before {
  content: '';
  position: absolute;
  width: 5px;
  height: 5px;
  background: #ccc;
  margin: auto;
  left: 0;
  right: 0;
  top: 30px;
  border-radius: 50%;
  animation: animate 1s linear infinite;
}
@keyframes animate {
  0% {
    opacity: 1;
    top: 10%;
  }
  100% {
    opacity: 0;
    top: 40%;
    transform: scale(0.8);
  }
}

section[id]::before {
  content: '';
  display: block;
  height: 75px;
  margin-top: -75px;
  visibility: hidden;
}

